text align fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -243,6 +243,7 @@ a:visited {
 
 .review-object-title {
   font-size: 18px;
+  text-align: right;
 }
 
 .review-body {
